--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,27 +9,30 @@
     <dimen name="bottom_sheet_list_item_text_size">16sp</dimen>
     <dimen name="bottom_sheet_title_text_size">16sp</dimen>
 
-    <dimen name="text_size_small">25sp</dimen>
-    <dimen name="text_size_medium">36sp</dimen>
-    <dimen name="text_size_large">46sp</dimen>
-
     <dimen name="label_text_size">@dimen/text_size_small</dimen>
     <dimen name="label_text_size_landscape">@dimen/text_size_small</dimen>
     <dimen name="label_text_size_large">@dimen/text_size_medium</dimen>
     <dimen name="label_text_size_large_landscape">@dimen/text_size_medium</dimen>
 
-    <dimen name="value_text_size">@dimen/text_size_small</dimen>
-    <dimen name="value_text_size_landscape">@dimen/text_size_small</dimen>
-    <dimen name="value_text_size_large">@dimen/text_size_medium</dimen>
-    <dimen name="value_text_size_large_landscape">@dimen/text_size_medium</dimen>
+    <dimen name="profile_photo_image_view_size">120dp</dimen>
+    <dimen name="profile_photo_progress_bar_size">180dp</dimen>
+
+    <dimen name="stat_image_size">@dimen/text_size_small</dimen>
+    <dimen name="stat_image_size_landscape">@dimen/text_size_small</dimen>
+    <dimen name="stat_image_size_large">@dimen/text_size_medium</dimen>
+    <dimen name="stat_image_size_large_landscape">@dimen/text_size_large</dimen>
+
+    <dimen name="text_size_small">25sp</dimen>
+    <dimen name="text_size_medium">36sp</dimen>
+    <dimen name="text_size_large">46sp</dimen>
 
     <dimen name="unit_text_size">@dimen/text_size_small</dimen>
     <dimen name="unit_text_size_landscape">@dimen/text_size_small</dimen>
     <dimen name="unit_text_size_large">@dimen/text_size_medium</dimen>
     <dimen name="unit_text_size_large_landscape">@dimen/text_size_medium</dimen>
 
-    <dimen name="stat_image_size">@dimen/text_size_small</dimen>
-    <dimen name="stat_image_size_landscape">@dimen/text_size_small</dimen>
-    <dimen name="stat_image_size_large">@dimen/text_size_medium</dimen>
-    <dimen name="stat_image_size_large_landscape">@dimen/text_size_large</dimen>
+    <dimen name="value_text_size">@dimen/text_size_small</dimen>
+    <dimen name="value_text_size_landscape">@dimen/text_size_small</dimen>
+    <dimen name="value_text_size_large">@dimen/text_size_medium</dimen>
+    <dimen name="value_text_size_large_landscape">@dimen/text_size_medium</dimen>
 </resources>
