Restyle the sign in and profile activities a bit

--- a/app/src/main/res/layout/sign_in_activity.xml
+++ b/app/src/main/res/layout/sign_in_activity.xml
@@ -39,8 +39,7 @@
         android:layout_marginBottom="36dp"
         android:gravity="center"
         android:text="@string/sign_in_message"
-        android:textSize="14sp"
-        android:textStyle="bold"/>
+        android:textSize="14sp"/>
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/googleSignInButton"
