--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/coordinatorLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -27,26 +28,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
-        android:layout_marginEnd="12dp"
         android:contentDescription="@string/my_location_content_description"
         android:src="@drawable/ic_my_location_black_24dp"
         android:tint="@color/blue"
         app:backgroundTint="@color/white"
         app:fabSize="normal"
-        app:layout_anchor="@id/recordTrackButton"
-        app:layout_anchorGravity="top|end|right"/>
+        app:layout_anchor="@+id/recordTrackButton"
+        app:layout_anchorGravity="top|end"
+        app:useCompatPadding="true"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/recordTrackButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="18dp"
+        android:layout_marginEnd="12dp"
         android:contentDescription="@string/my_location_content_description"
         android:src="@drawable/ic_fiber_manual_record_black_24dp"
         android:tint="@color/map_record_button"
         app:backgroundTint="@color/white"
-        app:fabSize="normal"
-        app:layout_anchor="@id/mapView"
-        app:layout_anchorGravity="bottom|end|right"
-        app:useCompatPadding="true"/>
+        app:fabSize="normal"/>
 
 </android.support.design.widget.CoordinatorLayout>
