--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -15,13 +15,22 @@
         app:mapbox_cameraZoom="11"
         app:mapbox_myLocation="true"
         app:mapbox_styleUrl="mapbox://styles/mapbox/outdoors-v10"
-        app:mapbox_uiAttributionTintColor="@color/map_attribution_tint"
+        app:mapbox_uiAttributionTintColor="@color/mapAttributionTint"
         app:mapbox_uiCompass="true"
         app:mapbox_uiDoubleTapGestures="true"
         app:mapbox_uiRotateGestures="true"
         app:mapbox_uiScrollGestures="true"
         app:mapbox_uiTiltGestures="true"
         app:mapbox_uiZoomGestures="true"/>
+
+    <com.github.rubensousa.floatingtoolbar.FloatingToolbar
+        android:id="@+id/trackToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_gravity="bottom"
+        app:floatingCustomView="@layout/track_toolbar"
+        app:floatingHandleFabClick="false"
+        app:floatingItemBackground="@color/white"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/myLocationButton"
@@ -46,8 +55,7 @@
         android:layout_marginEnd="12dp"
         android:contentDescription="@string/my_location_content_description"
         android:src="@drawable/ic_fiber_manual_record_black_24dp"
-        android:tint="@color/map_record_button"
-        app:backgroundTint="@color/white"
+        android:tint="@color/white"
         app:fabSize="normal"/>
 
 </android.support.design.widget.CoordinatorLayout>
