--- a/app/src/main/res/layout-land/compass_fragment.xml
+++ b/app/src/main/res/layout-land/compass_fragment.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
-        <io.trewartha.positional.compass.CompassView
+        <io.trewartha.positional.ui.CompassView
             android:id="@+id/compass_background_view"
             style="@style/CompassBackground"
             android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             android:src="@drawable/ic_compass_background"
             tools:ignore="ContentDescription"/>
 
-        <io.trewartha.positional.compass.CompassView
+        <io.trewartha.positional.ui.CompassView
             android:id="@+id/compass_needle_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
