--- a/app/src/main/res/menu/main_bottom_navigation.xml
+++ b/app/src/main/res/menu/main_bottom_navigation.xml
@@ -11,6 +11,13 @@
         app:showAsAction="ifRoom"/>
 
     <item
+        android:id="@+id/tracksNavMenuItem"
+        android:enabled="true"
+        android:icon="@drawable/ic_timeline_black_24dp"
+        android:title="@string/tracks"
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:id="@+id/positionNavMenuItem"
         android:enabled="true"
         android:icon="@drawable/ic_my_location_black_24dp"
