--- a/app/src/main/res/layout/track_card.xml
+++ b/app/src/main/res/layout/track_card.xml
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/nameTextView"
+            android:id="@+id/nameTextInputLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
@@ -41,8 +41,8 @@
             android:contentDescription="@string/track_card_time_content_description"
             android:src="@drawable/ic_date_range_black_24dp"
             android:tint="?attr/colorControlNormal"
-            app:layout_constraintStart_toStartOf="@id/nameTextView"
-            app:layout_constraintTop_toBottomOf="@id/nameTextView"/>
+            app:layout_constraintStart_toStartOf="@id/nameTextInputLayout"
+            app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"/>
 
         <TextView
             android:id="@+id/startEndTextView"
@@ -64,7 +64,7 @@
             android:contentDescription="@string/track_card_time_content_description"
             android:src="@drawable/ic_timer_black_24dp"
             android:tint="?attr/colorControlNormal"
-            app:layout_constraintStart_toStartOf="@id/nameTextView"
+            app:layout_constraintStart_toStartOf="@id/nameTextInputLayout"
             app:layout_constraintTop_toBottomOf="@id/startEndTextView"/>
 
         <TextView
