--- a/app/src/main/res/layout/tracks_fragment.xml
+++ b/app/src/main/res/layout/tracks_fragment.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/coordinatorLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,14 +19,14 @@
             android:layout_height="wrap_content"
             android:text="@string/tracks_empty_title"
             android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/emptySubtitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tracks_empty_subtitle"
-            app:layout_constraintTop_toBottomOf="@+id/emptyTitleTextView"/>
+            app:layout_constraintTop_toBottomOf="@+id/emptyTitleTextView" />
 
     </LinearLayout>
 
@@ -35,11 +34,6 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:listitem="@layout/track_card"/>
+        tools:listitem="@layout/track" />
 
 </android.support.design.widget.CoordinatorLayout>
