--- a/app/src/main/res/menu/track_edit.xml
+++ b/app/src/main/res/menu/track_edit.xml
@@ -5,6 +5,11 @@
     <item
         android:id="@+id/save"
         android:title="@string/save"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/delete"
+        android:title="@string/delete"
+        app:showAsAction="never" />
 
 </menu>
