Don't use the map snapshot for the image anymore

--- a/app/src/main/res/layout/track.xml
+++ b/app/src/main/res/layout/track.xml
@@ -13,6 +13,7 @@
         android:id="@+id/snapshotImageView"
         android:layout_width="match_parent"
         android:layout_height="192dp"
+        android:background="@color/gray5"
         android:contentDescription="@string/track_card_map_snapshot_content_description" />
 
     <TextView
