--- a/app/src/main/res/layout/track_edit_activity.xml
+++ b/app/src/main/res/layout/track_edit_activity.xml
@@ -2,8 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -11,45 +10,29 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
-        android:id="@+id/mapSnapshotScrollView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/nameTextInputLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintVertical_chainStyle="spread_inside">
-
-        <ImageView
-            android:id="@+id/snapshotImageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/track_card_map_snapshot_content_description" />
-
-    </ScrollView>
-
+    <ImageView
+        android:id="@+id/snapshotImageView"
+        android:layout_width="match_parent"
+        android:layout_height="256dp"
+        android:background="@color/gray5"
+        android:contentDescription="@string/track_card_map_snapshot_content_description"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/nameTextInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mapSnapshotScrollView">
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        app:layout_constraintTop_toBottomOf="@id/snapshotImageView">
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/nameTextInputEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/track_edit_name_hint"
-            android:inputType="textCapWords"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:inputType="textCapWords" />
 
     </android.support.design.widget.TextInputLayout>
 
