Add track image selection

--- a/app/src/main/res/layout/track_activity.xml
+++ b/app/src/main/res/layout/track_activity.xml
@@ -18,7 +18,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
+        android:background="@drawable/gray_gradient"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
