--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/coordinatorLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,9 +9,6 @@
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:mapbox_cameraTargetLat="39.7392"
-        app:mapbox_cameraTargetLng="-104.9903"
-        app:mapbox_cameraZoom="11"
         app:mapbox_myLocation="true"
         app:mapbox_styleUrl="mapbox://styles/mapbox/outdoors-v10"
         app:mapbox_uiAttributionTintColor="@color/mapAttributionTint"
@@ -21,7 +17,7 @@
         app:mapbox_uiRotateGestures="true"
         app:mapbox_uiScrollGestures="true"
         app:mapbox_uiTiltGestures="true"
-        app:mapbox_uiZoomGestures="true"/>
+        app:mapbox_uiZoomGestures="true" />
 
     <com.github.rubensousa.floatingtoolbar.FloatingToolbar
         android:id="@+id/trackToolbar"
@@ -30,7 +26,7 @@
         android:layout_gravity="bottom"
         app:floatingCustomView="@layout/track_toolbar"
         app:floatingHandleFabClick="false"
-        app:floatingItemBackground="@color/white"/>
+        app:floatingItemBackground="@color/white" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/myLocationButton"
@@ -44,7 +40,7 @@
         app:fabSize="normal"
         app:layout_anchor="@+id/recordTrackButton"
         app:layout_anchorGravity="top|end"
-        app:useCompatPadding="true"/>
+        app:useCompatPadding="true" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/recordTrackButton"
@@ -56,6 +52,6 @@
         android:contentDescription="@string/my_location_content_description"
         android:src="@drawable/ic_fiber_manual_record_black_24dp"
         android:tint="@color/white"
-        app:fabSize="normal"/>
+        app:fabSize="normal" />
 
 </android.support.design.widget.CoordinatorLayout>
