--- a/app/src/main/res/layout/track_edit_activity.xml
+++ b/app/src/main/res/layout/track_edit_activity.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/gray_gradient"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/track_edit_title" />
 
