--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:id="@+id/profileLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/profileLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -16,15 +15,6 @@
         android:layout_width="@dimen/profile_photo_progress_bar_size"
         android:layout_height="@dimen/profile_photo_progress_bar_size">
 
-        <ImageView
-            android:id="@+id/photoImageView"
-            android:layout_width="@dimen/profile_photo_image_view_size"
-            android:layout_height="@dimen/profile_photo_image_view_size"
-            android:layout_gravity="center"
-            android:contentDescription="@string/user_photo_content_description"
-            android:transitionName="@string/transition_user_photo"
-            tools:targetApi="lollipop"/>
-
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="match_parent"
@@ -32,7 +22,15 @@
             android:layout_gravity="center"
             android:indeterminate="true"
             android:visibility="gone"
-            tools:visibility="visible"/>
+            tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/photoImageView"
+            android:layout_width="@dimen/profile_photo_image_view_size"
+            android:layout_height="@dimen/profile_photo_image_view_size"
+            android:layout_gravity="center"
+            android:contentDescription="@string/user_photo_content_description"
+            tools:targetApi="lollipop" />
 
     </FrameLayout>
 
@@ -43,20 +41,20 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:text="John Doe"/>
+        tools:text="John Doe" />
 
     <TextView
         android:id="@+id/emailTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        tools:text="email@example.com"/>
+        tools:text="email@example.com" />
 
     <Button
         android:id="@+id/signOutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/sign_out"/>
+        android:text="@string/sign_out" />
 
 </LinearLayout>
