--- a/app/src/main/res/menu/main_bottom_navigation.xml
+++ b/app/src/main/res/menu/main_bottom_navigation.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
@@ -8,27 +7,34 @@
         android:enabled="true"
         android:icon="@drawable/ic_map_black_24dp"
         android:title="@string/map"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/tracksNavMenuItem"
         android:enabled="true"
         android:icon="@drawable/ic_list_black_24dp"
         android:title="@string/tracks"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/positionNavMenuItem"
         android:enabled="true"
         android:icon="@drawable/ic_my_location_black_24dp"
         android:title="@string/position"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/compassNavMenuItem"
         android:enabled="true"
         android:icon="@drawable/ic_explore_black_24dp"
         android:title="@string/compass"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/profileNavMenuItem"
+        android:enabled="true"
+        android:icon="@drawable/ic_person_black_24dp"
+        android:title="@string/profile"
+        app:showAsAction="ifRoom" />
 
 </menu>
