--- a/app/src/main/res/layout/track_toolbar.xml
+++ b/app/src/main/res/layout/track_toolbar.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<LinearLayout
-    android:id="@+id/trackingStartedLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/trackingStartedLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent"
+    android:background="@color/red"
     android:orientation="horizontal">
 
     <TextView
@@ -24,7 +23,7 @@
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/durationImageView"
@@ -35,7 +34,7 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:contentDescription="@string/tracking_toolbar_duration_content_description"
         android:src="@drawable/ic_timer_black_24dp"
-        android:tint="@color/white"/>
+        android:tint="@color/white" />
 
     <TextView
         android:id="@+id/durationTextView"
@@ -48,7 +47,7 @@
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="14sp"
-        tools:text="00:00:00"/>
+        tools:text="00:00:00" />
 
     <ImageView
         android:id="@+id/distanceImageView"
@@ -59,7 +58,7 @@
         android:layout_marginTop="@dimen/activity_vertical_margin"
         android:contentDescription="@string/tracking_toolbar_distance_content_description"
         android:src="@drawable/ic_timeline_black_24dp"
-        android:tint="@color/white"/>
+        android:tint="@color/white" />
 
     <TextView
         android:id="@+id/distanceTextView"
@@ -70,7 +69,7 @@
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="14sp"
-        tools:text="00:00:00"/>
+        tools:text="00:00:00" />
 
     <ImageView
         android:id="@+id/stopTrackButton"
@@ -86,6 +85,6 @@
         android:tint="@color/mapRecordIcon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 </LinearLayout>
