--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,20 +3,19 @@
     <!-- Base Colors -->
     <!-- NOTE: ONLY OTHER COLORS SHOULD REFER TO THESE -->
     <color name="black">#000000</color>
-    <color name="black_transparent">#88000000</color>
-    <color name="blue">#00a9e7</color>
+    <color name="blue">#00A9E7</color>
     <color name="gray1">#333333</color>
     <color name="gray1_transparent">#88333333</color>
     <color name="gray2">#444444</color>
     <color name="gray3">#666666</color>
     <color name="gray4">#AAAAAA</color>
-    <color name="gray5">#DDDDDD</color>
-    <color name="gray6">#EEEEEE</color>
+    <color name="gray5">#EEEEEE</color>
+    <color name="green">#87CE1D</color>
     <color name="red">#FF0000</color>
     <color name="white">#FFFFFF</color>
 
     <!-- Material Theme Colors -->
-    <color name="colorAccent">@color/blue</color>
+    <color name="colorAccent">@color/green</color>
     <color name="colorPrimary">@color/gray1</color>
     <color name="colorPrimaryDark">@color/black</color>
 
@@ -41,7 +40,7 @@
     <color name="navigationBarTextColor">@color/gray1</color>
 
     <!-- Position Stats -->
-    <color name="positionStatDivider">@color/gray6</color>
+    <color name="positionStatDivider">@color/gray5</color>
     <color name="positionStatTextColor">@color/gray1</color>
     <color name="positionStatIconTint">@color/gray1</color>
 
@@ -53,8 +52,7 @@
     <color name="viewPagerTabDotUnselected">@color/gray4</color>
 
     <!-- Tracks -->
-    <color name="trackImageUploadIcon">@color/black_transparent</color>
-    <color name="trackImageBackgroundDay">@color/gray6</color>
+    <color name="trackImageBackgroundDay">@color/gray5</color>
     <color name="trackImageBackgroundNight">@color/gray2</color>
     <color name="trackImageForegroundDay">@color/white</color>
     <color name="trackImageForegroundNight">@color/gray1</color>
