--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -36,7 +36,7 @@
         android:layout_gravity="top|end"
         android:contentDescription="@string/my_location_content_description"
         android:src="@drawable/ic_my_location_black_24dp"
-        android:tint="@color/blue"
+        android:tint="@color/green"
         app:backgroundTint="@color/white"
         app:fabSize="normal"
         app:layout_anchor="@+id/recordTrackButton"
@@ -51,7 +51,7 @@
         android:layout_marginBottom="18dp"
         android:layout_marginEnd="12dp"
         android:contentDescription="@string/my_location_content_description"
-        android:src="@drawable/ic_record_black_24dp"
+        android:src="@drawable/ic_fiber_manual_record_black_24dp"
         android:tint="@color/white"
         app:backgroundTint="@color/red"
         app:fabSize="normal" />
